--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -4,3 +4,9 @@
 "Error.unknown" = "Произошла неизвестная ошибка";
 "Error.repeat" = "Повторить";
 "Error.title" = "Ошибка";
+"ProfileCell.myNFT" = "Мои NFT"
+"ProfileCell.favoritesNFT" = "Избранные NFT"
+"ProfileCell.developer" = "О разработчике"
+"Edit.name" = "Имя"
+"Edit.description" = "Описание"
+"Edit.link" = "Ссылка"
