feat: (scenes/Catalog) main Catalog UI

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -10,3 +10,7 @@
 "Edit.name" = "Имя";
 "Edit.description" = "Описание";
 "Edit.link" = "Ссылка";
+"Catalog.sort" = "Сортировка";
+"Catalog.sort.byName" = "По названию";
+"Catalog.sort.byNftNumber" = "По количеству NFT";
+"Close" = "Закрыть";
