--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -10,4 +10,4 @@
 "Edit.name" = "Имя";
 "Edit.description" = "Описание";
 "Edit.link" = "Ссылка";
-"Edit.editImage" = "Сменить фото"
+"Edit.editImage" = "Сменить фото";
