add localisable string

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -11,3 +11,4 @@
 "Edit.description" = "Описание";
 "Edit.link" = "Ссылка";
 "Edit.editImage" = "Сменить фото";
+"Edit.loadImage" = "Загрузить изображение";
