feat: Collection View UI

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -14,3 +14,4 @@
 "Catalog.sort.byName" = "По названию";
 "Catalog.sort.byNftNumber" = "По количеству NFT";
 "Close" = "Закрыть";
+"Collection author:" = "Автор коллекции:";
