add strings for statistics epic

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -12,3 +12,7 @@
 "Edit.link" = "Ссылка";
 "Edit.editImage" = "Сменить фото";
 "Edit.loadImage" = "Загрузить изображение";
+"Sort.byName";
+"Sort.byRating";
+"SortAlert.title";
+"SortAlert.close";
