small strings fix

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -12,7 +12,7 @@
 "Edit.link" = "Ссылка";
 "Edit.editImage" = "Сменить фото";
 "Edit.loadImage" = "Загрузить изображение";
-"Sort.byName";
-"Sort.byRating";
-"SortAlert.title";
-"SortAlert.close";
+"Sort.byName" = "По имени";
+"Sort.byRating" = "По рейтингу";
+"SortAlert.title" = "Сортировка";
+"SortAlert.close" = "Закрыть";
