--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -22,4 +22,5 @@
 "MyNFTVC.byRating" = "По рейтингу";
 "MyNFTVC.byName" = "По названию";
 "MyNFTVC.close" = "Закрыть";
+"MyNFTVC.empty" = "У Вас еще нет NFT";
 
