--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -16,3 +16,5 @@
 "Sort.byRating" = "По рейтингу";
 "SortAlert.title" = "Сортировка";
 "SortAlert.close" = "Закрыть";
+"UserWebsite.button" = "Перейти на сайт пользователя";
+"NFTCollection.screenTitle" = "Коллекция NFT";
