feat: currencies table

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -15,3 +15,6 @@
 "Catalog.sort.byNftNumber" = "По количеству NFT";
 "Close" = "Закрыть";
 "Collection author:" = "Автор коллекции:";
+"Price" = "Цена";
+"Add to cart" = "Добавить в корзину";
+"Go to cart" = "Перейти в корзину";
