feat: nftviewcontroller nftscollection

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -18,3 +18,4 @@
 "Price" = "Цена";
 "Add to cart" = "Добавить в корзину";
 "Go to cart" = "Перейти в корзину";
+"Go to seller's website" = "Перейти на сайт продавца";
