added functionality to remove from favorites NFT

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -23,4 +23,6 @@
 "MyNFTVC.byName" = "По названию";
 "MyNFTVC.close" = "Закрыть";
 "MyNFTVC.empty" = "У Вас еще нет NFT";
+"Favorite.header" = "Избранные NFT";
+"FavoriteVc.empty" = "У Вас еще нет избранных NFT";
 
