feat: onboarding, rate app on catalog view, alert on collections fetch fail

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -19,3 +19,13 @@
 "Add to cart" = "Добавить в корзину";
 "Go to cart" = "Перейти в корзину";
 "Go to seller's website" = "Перейти на сайт продавца";
+"Couldn't retrieve data" = "Не удалось получить данные";
+"Cancel" = "Отменить";
+"Try again" = "Повторить";
+"What's inside?" = "Что внутри?";
+"OnboardingTitle1" = "Исследуйте";
+"OnboardingTitle2" = "Коллекционируйте";
+"OnboardingTitle3" = "Состязайтесь";
+"OnboardingCaption1" = "Присоединяйтесь и откройте новый мир уникальных NFT для коллекционеров";
+"OnboardingCaption2" = "Пополняйте свою коллекцию эксклюзивными картинками, созданными нейросетью!";
+"OnboardingCaption3" = "Смотрите статистику других и покажите всем, что у вас самая ценная коллекция";
